syntax = "proto3";

service UserService {
  rpc LoginUser (UserRequest) returns (UserResponse);
  rpc RegisterUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message UserResponse {
  bool success = 1;
}
